# json_serialize

./: Makefile  README.md  pyproject.toml
src/: deployment_bad.py  deployment_good.py  extra.py
tests/: TestDeployment.test_good_deployment.approved.txt  TestGoodDeployment.test_good_deployment_with_container.approved.txt  TestGoodDeployment.test_good_deployment_with_metadata.approved.txt  TestGoodDeployment.test_good_deployment_with_more_replicas.approved.txt  TestGoodDeployment.test_good_deployment_with_service_account.approved.txt  test_deployment.py  test_deployment_bad.py  test_deployment_good.py
tests/builders/: deployment_builder.py
